# prepare_commit_msg

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
src/prepare_commit_msg/: __init__.py  hook.py
