[project]
name = "prepare-commit-msg"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
prepare-commit-msg-hook = "prepare_commit_msg.hook:main"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/prepare_commit_msg"]
